Bug 126979 - DOCX Import: Image is misplaced: overflow (image running off the page) is missing
Summary: DOCX Import: Image is misplaced: overflow (image running off the page) is mis...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords: filter:docx
Depends on:
Blocks: DOCX-Images
  Show dependency treegraph
 
Reported: 2019-08-16 19:59 UTC by Gülşah Köse
Modified: 2020-11-30 14:31 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (172.69 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-08-16 19:59 UTC, Gülşah Köse
Details
comparison MSO and LO (1.28 MB, application/pdf)
2019-08-16 20:00 UTC, Gülşah Köse
Details
The minimized example file in Word and Writer (1.08 MB, image/png)
2020-11-30 14:30 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gülşah Köse 2019-08-16 19:59:02 UTC
Description:
When we have a overflowed image in docx, if we want to open it in LibreOffice, image location is changing to fit into the file. Real problem is LibreOffice does not have an image overflow feature. We can not create an odt with overflowed image. It is not possible to correct it manually.

Steps to Reproduce:
1. Open sample.docx

Actual Results:
İmage fits into the document.

Expected Results:
We should see only bottom of the image. See the comparison pdf at the attachment.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Gülşah Köse 2019-08-16 19:59:46 UTC
Created attachment 153445 [details]
Sample file
Comment 2 Gülşah Köse 2019-08-16 20:00:26 UTC
Created attachment 153446 [details]
comparison MSO and LO
Comment 3 Durgapriyanka 2019-08-16 20:40:16 UTC
Thank you for reporting the bug. I can confirm the bug present in

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 4 Xisco Faulí 2019-08-19 06:32:33 UTC
Also reproduced in

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.15; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 5 NISZ LibreOffice Team 2020-11-30 14:30:12 UTC
Created attachment 167683 [details]
The minimized example file in Word and Writer

Looks good in master:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: f7e2f5bca938aa916830e07895d2da6820282055
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL

since:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=195eae4852012eed6da72c0a9f55094a09aa2867

author	Miklos Vajna <vmiklos@collabora.com>	2020-01-23 18:05:26 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2020-01-23 22:22:56 +0100

sw DoNotCaptureDrawObjsOnPage: don't capture wrap-through Writer images, either
Comment 6 NISZ LibreOffice Team 2020-11-30 14:31:09 UTC
Thanks Miklos for fixing this one :)