WIP: tdf#126979 DOCX import: handle image overflow

Change-Id: Ib5c38f4e4a5fb4f315cc15c5b1bdc305b42b42b3